Add a sample properties to expose

--- a/resources/public/bootstrap-webproperty.properties
+++ b/resources/public/bootstrap-webproperty.properties
@@ -1,2 +1,2 @@
 # The default folder to look for properties files to expose
-path.to.properties.folder=/tmp/webproperty
+path.to.properties.folder=resources/public/
