Add the post to update the file properties' content

--- a/resources/public/sample0.properties
+++ b/resources/public/sample0.properties
@@ -1,3 +1,5 @@
-some.key.0=some.value.0
-some.key.1=some.value.1
+#Sat May 31 13:06:11 CEST 2014
+some.key.3=anything
 some.key.2=some.value.2
+some.key.1=some.value.1
+some.key.0=some.value.0
