Follow the redirect to get the result

--- a/resources/public/sample0.properties
+++ b/resources/public/sample0.properties
@@ -1,4 +1,5 @@
-#Sat May 31 13:06:11 CEST 2014
+#Sat May 31 19:41:53 CEST 2014
+some.key.4=another thing
 some.key.3=anything
 some.key.2=some.value.2
 some.key.1=some.value.1
